complete initial layout

--- a/index.html
+++ b/index.html
@@ -89,27 +89,27 @@
       <div class="list-content">
         <div class="list-item">
           <a href="#">
-            <img src="./images/covers/bob.png" alt="Bob Esponja la película">
+            <img src="./images/covers/a-naruto.png" alt="Bob Esponja la película">
           </a>
         </div>
         <div class="list-item">
           <a href="#">
-            <img src="./images/covers/matrix.png" alt="Bob Esponja la película">
+            <img src="./images/covers/a-pokemon.png" alt="Bob Esponja la película">
           </a>
         </div>
         <div class="list-item">
           <a href="#">
-            <img src="./images/covers/spider-man.png" alt="Bob Esponja la película">
+            <img src="./images/covers/a-one.png" alt="Bob Esponja la película">
           </a>
         </div>
         <div class="list-item">
           <a href="#">
-            <img src="./images/covers/dragon.png" alt="Bob Esponja la película">
+            <img src="./images/covers/a-man.png" alt="Bob Esponja la película">
           </a>
         </div>
         <div class="list-item">
           <a href="#">
-            <img src="./images/covers/john.png" alt="Bob Esponja la película">
+            <img src="./images/covers/a-ser.png" alt="Bob Esponja la película">
           </a>
         </div>
         <div class="list-item">
